WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268941
[Site Isolation] Null pointer dereference in WebExtensionControllerProxy::didStartProvisionalLoadForFrame()
https://bugs.webkit.org/show_bug.cgi?id=268941
Summary
[Site Isolation] Null pointer dereference in WebExtensionControllerProxy::did...
Charlie Wolfe
Reported
2024-02-07 13:10:05 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-07 13:10:27 PST
<
rdar://problem/122493107
>
Charlie Wolfe
Comment 2
2024-02-07 13:12:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24028
EWS
Comment 3
2024-02-08 00:32:32 PST
Committed
274274@main
(d13e12f2f79e): <
https://commits.webkit.org/274274@main
> Reviewed commits have been landed. Closing PR #24028 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug