[Site Isolation] Null pointer dereference in WebExtensionControllerProxy::didStartProvisionalLoadForFrame() rdar://122493107 https://bugs.webkit.org/show_bug.cgi?id=268941

Reviewed by Pascoe and Alex Christensen.

WebFrame::parentFrame() should return the parent frame even if it is out-of-process.

* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::parentFrame const):

Canonical link: https://commits.webkit.org/274274@main